src/objects/UniqueEntry__Contact_Additional_Address__c.object
<CustomObject>
    <fields>
        <fullName>UniqueEntry__Address_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Additional Addresses</relationshipLabel>
        <relationshipName>Contact_Additional_Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__CountryPicklist__c</fullName>
        <label>CountryPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueEntry__Custom_Street__c</fullName>
        <label>Custom_Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__StatePicklist__c</fullName>
        <label>StatePicklist</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UniqueEntry__CountryPicklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                    <default>true</default>
                    <label>New York</label>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Ontario</fullName>
                </value>
                <value>
                    <fullName>O&apos; Brian</fullName>
                </value>
                <value>
                    <fullName>La&apos;Henry</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueEntry__Street_1__c</fullName>
        <label>Street_1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__UpdateTime_stamp__c</fullName>
        <label>Update Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Zip_Postal_Code__c</fullName>
        <label>Zip_Postal_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Contact Additional Address</label>
    <listViews>
        <fullName>UniqueEntry__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Additional Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Additional Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>